page-tournament (witout bootstrap tables)

--- a/bonus.html
+++ b/bonus.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Dark Slot</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
-	<!-- <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css"> -->
 
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/main.css">
@@ -472,8 +471,7 @@
 
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="bootstrap/assets/javascripts/bootstrap.js"></script>
-
-<script type="text/javascript" src="js/reg-password.js"></script>
+<script src="js/jquery.nicescroll.min.js"></script>
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
