--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 
 	<script src="js/jquery-3.2.1.min.js"></script>
-	
+
 </head>
 <body>
 
@@ -108,188 +108,14 @@
 			</div>
 		</div>
 
-		<div id="casino-banner" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-		  <!-- <ol class="carousel-indicators">
-		    <li data-target="#casino-banner" data-slide-to="0" class="active"></li>
-		    <li data-target="#casino-banner" data-slide-to="1"></li>
-		    <li data-target="#casino-banner" data-slide-to="2"></li>
-		    <li data-target="#casino-banner" data-slide-to="3"></li>
-		    <li data-target="#casino-banner" data-slide-to="4"></li>
-		  </ol> -->
-		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner" role="listbox">
-			  <div class="item active pirate-reg">
-		  		<img src="img/slider-images/slide-lord.png" alt="lord">
-
-					<div class="carousel-caption">
-			  		<div class="container">
-			  			<div class="row">
-			  				<div class="col-sm-8">
-									<div class="slide-wrap">
-										<div class="row">
-											<div class="col-sm-6">
-												<div class="slide-bonus">
-													<span class="slide-bonus__first-line">10$</span>
-													<span class="slide-bonus__second-line">без депозита</span>
-													<span class="slide-bonus__third-line">- за регистрацию -</span>
-													<a class="ds-link" data-toggle="modal" data-target="#modalRules">Подробнее</a>
-												</div>
-											</div>
-
-											<div class="col-sm-6">
-												<form action="#" class="registration-form-mini">
-													<div class="form-group">
-												    <input type="email" class="form-control" name="" placeholder="Email">
-												  </div>
-													<div class="form-group">
-												    <input type="text" class="form-control" name="" placeholder="Никнейм">
-												  </div>
-
-													<div class="form-group">
-												    <input type="password" class="form-control" name="" placeholder="Пароль">
-												  </div>
-													<div class="form-group hidden">
-												    <input type="password" class="form-control" name="" placeholder="Подтверждение пароля">
-												  </div>
-
-													<div class="form-group">
-														<select class="form-control" name="">
-															<option value="currency" selected disabled>Валюта</option>
-															<option value="rub">Рубли</option>
-															<option value="euro">Евро</option>
-															<option value="dollar">Доллары</option>
-															<option value="btc">Биткоины</option>
-														</select>
-													</div>
-
-													<div class="form-group">
-														<input type="checkbox" id="slide-checkbox" class="registration-form-mini__checkbox">
-														<label for="slide-checkbox" class="registration-form-mini__label-checkbox">
-															Мне 18 лет и я принимаю <a href="#" class="ds-link" data-toggle="modal" data-target="#modalRules">Положения и условия</a></label>
-												  </div>
-
-													<button class="btn btn-danger btn-full-width">Регистрация</button>
-												</form>
-											</div>
-										</div>
-									</div>
-			  				</div>
-			  			</div>
-			  		</div>
-			  	</div>
-				</div>
-
-		  	<div class="item">
-		  		<img src="img/slider-images/slide-viking.png" alt="viking">
-		  		<div class="">
-
-		  			<div class="slide__wrapper">
-		  				<div class="slide__text">
-		  					<span class="slide__upper-text">Розыгрыш каждую неделю</span>
-		  					<h1 class="slide__header">100% кэшбек</h1>
-		  					<a href="everyweek-cashback.html" class="btn btn-danger">Подробнее</a>
-		  				</div>
-		  			</div>
-		  		</div>
-		  	</div>
-
-		  	<div class="item">
-		  		<img src="img/slider-images/day-slot.jpg" alt="day slot">
-		  		<div class="carousel-caption">
-
-		  			<div class="slide__button-wrapper">
-		  				<a href="day-slot.html" class="btn btn-danger">Играть</a>
-		  			</div>
-		  		</div>
-		  	</div>
-
-		  	<div class="item tiger-reg">
-		  		<img src="img/slider-images/slide-wood.png" alt="wood">
-
-					<div class="carousel-caption">
-			  		<div class="container">
-			  			<div class="row">
-								<div class="col-md-6">
-
-									<div class="registration-bonus">
-										<div class="registration-bonus-content">
-											<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-											<h3 class="registration-bonus__underheader">Приветственный бонус</h3>
-											<span class="registration-bonus__count">1800$</span>
-											<a href="bonus.html" class="ds-link">Подробнее</a>
-										</div>
-
-										<div class="registration-bonus-pers">
-											<img src="img/tiger.png" alt="toger" class="registration-bonus-pers-img">
-										</div>
-									</div>
-
-								</div>
-
-								<div class="col-md-4 col-md-offset-2">
-									<div class="tiger-reg-form">
-										<form action="#" class="registration-form-mini registration-form-mini--slide">
-											<div class="form-group">
-												<input type="email" class="form-control" name="" placeholder="Email">
-											</div>
-											<div class="form-group">
-												<input type="text" class="form-control" name="" placeholder="Никнейм">
-											</div>
-
-											<div class="form-group">
-												<input type="password" class="form-control" name="" placeholder="Пароль">
-											</div>
-											<div class="form-group hidden">
-												<input type="password" class="form-control" name="" placeholder="Подтверждение пароля">
-											</div>
-
-											<div class="form-group">
-												<select class="form-control" name="">
-													<option value="currency" selected disabled>Валюта</option>
-													<option value="rub">Рубли</option>
-													<option value="euro">Евро</option>
-													<option value="dollar">Доллары</option>
-													<option value="btc">Биткоины</option>
-												</select>
-											</div>
-
-											<div class="form-group">
-												<input type="checkbox" id="slide-checkbox" class="registration-form-mini__checkbox">
-												<label for="slide-checkbox" class="registration-form-mini__label-checkbox">
-													Мне 18 лет и я принимаю <a href="#" class="ds-link" data-toggle="modal" data-target="#modalRules">Положения и условия</a></label>
-											</div>
-
-			  							<input type="submit" class="btn btn-secondary btn-secondary-full btn-full-width" value="Регистрация">
-			  						</form>
-									</div>
-								</div>
-				  		</div>
-				  	</div>
-		  		</div>
-		  	</div>
-
-		  	<div class="item">
-		  		<img src="img/slider-images/free-spins.png" alt="free spins">
-		  		<div class="carousel-caption">
-
-		  			<div class="slide__button-wrapper">
-		  				<a href="free-spins.html" class="btn btn-danger">Подробнее</a>
-		  			</div>
-		  		</div>
-		  	</div>
-		  </div>
-
-		  <!-- Controls -->
-		  <a class="left carousel-control" href="#casino-banner" role="button" data-slide="prev">
-		  	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		  	<span class="sr-only">Previous</span>
-		  </a>
-		  <a class="right carousel-control" href="#casino-banner" role="button" data-slide="next">
-		  	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		  	<span class="sr-only">Next</span>
-		  </a>
-		</div>
+		<!-- Carousel insertion -->
+		<script>
+			$(document).ready(function(){
+			 	$('#ds-carousel').load('./_carousel.html');
+			});
+		</script>
+		<div id="ds-carousel"></div>
+		<!-- End Carousel insertion -->
 
 		<section class="games">
 			<div class="container">
@@ -440,6 +266,8 @@
 			</div>
 		</div>
 	</nav>
+
+	<div id="preloader"></div>
 
 	<div class="modal fade modalRules" id="modalRules" tabindex="-1" role="dialog" aria-labelledby="modalRulesLabel">
 	  <div class="modal-dialog" role="document">
