--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<!-- <div class="games-preview"> -->
+					<!-- <div class="games-preview-->
 					<div class="col-md-3">
 						<div class="games-preview__item"></div>
 					</div>
