reload bonus page adapted

--- a/bonus.html
+++ b/bonus.html
@@ -36,7 +36,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-6 col-md-4">
+					<div class="col-sm-6 col-lg-4">
 						<div class="deposit deposit--first">
 							<span class="deposit__percents">100%</span>
 							<span class="deposit__number">Первый депозит</span>
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-6 col-md-4">
+					<div class="col-sm-6 col-lg-4">
 						<div class="deposit deposit--second">
 							<span class="deposit__percents">50%</span>
 							<span class="deposit__number">Второй депозит</span>
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-offset-3 col-sm-6 col-md-offset-0 col-md-4">
+					<div class="col-sm-offset-3 col-sm-6 col-lg-offset-0 col-lg-4">
 						<div class="deposit deposit--third">
 							<span class="deposit__percents">200%</span>
 							<span class="deposit__number">Третий депозит</span>
@@ -104,7 +104,7 @@
 					</div>
 
 					<div class="col-xs-12 col-sm-offset-1 col-sm-5 text-right">
-						<div class="cashback-code text-left">
+						<div class="cashback-code">
 							<span class="cashback-code__header">Во время депозита используйте VIP-код</span>
 							<span class="cashback-code__code">VIP1000</span>
 						</div>
@@ -116,7 +116,7 @@
 						<span class="cashback__not-all">Это еще не все</span>
 					</div>
 
-					<div class="col-xs-6 col-sm-5">
+					<div class="col-xs-6 col-sm-6">
 						<p class="cashback__advantages">А так же вы получите <span class="cashback__red">3й уровень,</span> который даст вам массу <span class="cashback__dashed">преимуществ</span>
 							<a href="levels.html" class="cashback__question">?</a>
 						</p>
