--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -29,13 +29,13 @@
 		<section class="reload-bonus">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-6 col-xs-12">
+					<div class="col-xs-12">
 						<h1 class="reload-bonus__header">50% reload bonus</h1>
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-7 col-xs-12">
+					<div class="col-xs-12 col-sm-12">
 						<div class="reload-bonus__text-wrapper">
 							<p class="reload-bonus__text">Каждый пользователь имеет право один раз и в любой день недели воспользоваться бонус-кодом Reload, сумма которого зависит от вашего уровня.</p>
 						</div>
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-3 col-xs-6">
+					<div class="col-xs-12 col-sm-3">
 						<div class="level">
 							<div class="level__text-wrapper">
 								<span class="level__up-text">до</span>
@@ -53,7 +53,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3 col-xs-6">
+					<div class="col-xs-12 col-sm-3">
 						<div class="level">
 							<div class="level__text-wrapper">
 								<span class="level__up-text">до</span>
@@ -63,7 +63,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3 col-xs-6">
+					<div class="col-xs-12 col-sm-3">
 						<div class="level">
 							<div class="level__text-wrapper">
 								<span class="level__up-text">до</span>
@@ -73,7 +73,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-3 col-xs-6">
+					<div class="col-xs-12 col-sm-3">
 						<div class="level">
 							<div class="level__text-wrapper">
 								<span class="level__up-text">до</span>
