everyweek-cashback adapted

--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -29,35 +29,35 @@
 		<section class="everyweek-cashback">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-12 text-center">
+					<div class="col-xs-12 text-center">
 						<h2 class="everyweek-cashback__header">Еженедельный розыгрыш кэшбека</h2>
 						<span class="everyweek-cashback__back-text">#cashback</span>
 					</div>
-					<div class="col-sm-12 text-center">
+					<div class="col-xs-12 text-center">
 						<p class="everyweek-cashback__text">Каждый <span>понедельник</span> мы с помощью генератора случайных чисел среди всех игроков, отберём 10 счастливчиков которые получат кешбек проиграных средств от 10% до 100%</p>
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-xs-12">
 						<div class="places">
 							<div class="row">
 								<!-- <div class="places"> -->
-								<div class="col-xs-4 col-sm-12 col-md-4 text-center">
+								<div class="col-xs-12 col-md-4 text-center">
 									<div class="places__item places__item--second">
 										<h3 class="places__header">50%</h3>
 										<span class="place__bottom-text">2-3 место</span>
 									</div>
 								</div>
 
-								<div class="col-xs-4 col-sm-12 col-md-4 text-center">
+								<div class="col-xs-12 col-md-4 text-center">
 									<div class="places__item places__item--first">
 										<h3 class="places__header">100%</h3>
 										<span class="place__bottom-text">1 место</span>
 									</div>
 								</div>
 
-								<div class="col-xs-4 col-sm-12 col-md-4 text-center">
+								<div class="col-xs-12 col-md-4 text-center">
 									<div class="places__item places__item--third">
 										<h3 class="places__header">10%</h3>
 										<span class="place__bottom-text">4-10 место</span>
@@ -70,7 +70,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-offset-3 col-sm-6 text-center">
+					<div class="col-xs-12 col-md-offset-3 col-md-6 text-center">
 						<div class="everyweek-cashback__condition">
 							<p class="everyweek-cashback__condition-text">Участие в акции могут принять участники достигшие <span class="everyweek-cashback__second-level">2-го уровня</span> <a href="levels.html" class="everyweek-cashback__hint">?</a></p>
 						</div>
@@ -169,7 +169,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-offset-6 col-sm-6">
+					<div class="col-xs-12 col-sm-offset-6 col-sm-6">
 						<span class="cashback-description__bottom">Каждую <span>субботу</span> мы дарим игрокам 50% кешбек до 2000$ долларов , для этого внесите депозит в субботу с 01:00 до 23:59 МСК и если вы по итогу дня потерпели неудачу , мы возместим вам 50% от потерь ! Доступно для всех уровней.</span>
 					</div>
 				</div>
