Carousel - First slide - mobile

--- a/_carousel.html
+++ b/_carousel.html
@@ -15,19 +15,20 @@
     <div class="carousel-caption">
       <div class="container">
         <div class="row">
-          <div class="col-sm-8">
+          <div class="col-xs-12 col-sm-12 col-md-8">
             <div class="slide-wrap">
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                   <div class="slide-bonus">
                     <span class="slide-bonus__first-line">10$</span>
                     <span class="slide-bonus__second-line">без депозита</span>
                     <span class="slide-bonus__third-line">- за регистрацию -</span>
                     <a class="ds-link" data-toggle="modal" data-target="#modalRules">Подробнее</a>
+                    <button class="btn btn-danger btn-big btn-full-width btn-mobile-reg hidden-sm hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
                   </div>
                 </div>
 
-                <div class="col-sm-6">
+                <div class="col-xs-7 col-sm-5 col-md-6 hidden-xs">
                   <form action="#" class="registration-form-mini">
                     <div class="form-group">
                       <input type="email" class="form-control" name="" placeholder="Email">
@@ -70,7 +71,7 @@
     </div>
   </div>
 
-  <div class="item">
+  <!-- <div class="item">
     <img src="img/slider-images/slide-viking.png" alt="viking">
     <div class="">
 
@@ -167,7 +168,7 @@
         <a href="free-spins.html" class="btn btn-danger">Подробнее</a>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <!-- Controls -->
