--- a/tournament.html
+++ b/tournament.html
@@ -129,8 +129,15 @@
 								<h2 class="places-tournament__header">Таблица <span>победителей</span></h2>
 
 								<div class="row">
-									<div class="col-sm-6">
+									<div class="col-sm-12 col-md-6">
 										<table class="places-table">
+											<colgroup>
+												<col width="10%">
+											  <col width="30%">
+												<col width="30%">
+											  <col width="30%">
+											</colgroup>
+
 											<tr class="places-table__row-header">
 												<td class="places-table__cell-header">Место</td>
 												<td class="places-table__cell-header">Приз</td>
@@ -230,9 +237,15 @@
 										</table>
 									</div>
 
-									<div class="col-sm-6">
+									<div class="col-sm-12 col-md-6">
 										<table class="places-table">
-											<tr class="places-table__row-header">
+											<colgroup>
+												<col width="10%">
+											  <col width="30%">
+												<col width="30%">
+											  <col width="30%">
+											</colgroup>
+											<tr class="places-table__row-header hidden-sm">
 												<td class="places-table__cell-header">Место</td>
 												<td class="places-table__cell-header">Приз</td>
 												<td class="places-table__cell-header">Счастливчик</td>
