--- a/free-spins.html
+++ b/free-spins.html
@@ -35,7 +35,7 @@
 		<section class="free-spins">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-7">
+					<div class="col-xs-12 col-sm-7">
 						<div class="free-spins__header-wrapper">
 							<h2 class="free-spins__header">Бонусные фриспины по четвергам</h2>
 							<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
@@ -57,22 +57,22 @@
 			<div class="container">
 				<div class="row">
 
-					<div class="col-sm-3 text-center">
+					<div class="col-xs-6 col-sm-3 text-center">
 						<span class="statistics__number">20</span>
 						<span class="statistics__col-text">спинов на депозит 20$ (или эквивалент)</span>
 					</div>
 
-					<div class="col-sm-3 text-center">
+					<div class="col-xs-6 col-sm-3 text-center">
 						<span class="statistics__number">50</span>
 						<span class="statistics__col-text">спинов на депозит 50$ (или эквивалент)</span>
 					</div>
 
-					<div class="col-sm-3 text-center">
+					<div class="col-xs-6 col-sm-3 text-center">
 						<span class="statistics__number">100</span>
 						<span class="statistics__col-text">спинов на депозит 100$ (или эквивалент)</span>
 					</div>
 
-					<div class="col-sm-3 text-center">
+					<div class="col-xs-6 col-sm-3 text-center">
 						<span class="statistics__number">250</span>
 						<span class="statistics__col-text">спинов на депозит от 200$ (или эквивалент)</span>
 					</div>
