partners page adapted?

--- a/partners.html
+++ b/partners.html
@@ -106,7 +106,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<div class="income income--first">
 							<div class="income__wrapper">
 								<h3 class="income__header">1 уровень</h3>
@@ -115,7 +115,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<div class="income income--second">
 							<div class="income__wrapper">
 								<h3 class="income__header">2 уровень</h3>
@@ -124,7 +124,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<div class="income income--third">
 							<div class="income__wrapper">
 								<h3 class="income__header">VIP уровень</h3>
