--- a/_carousel.html
+++ b/_carousel.html
@@ -1,12 +1,12 @@
 <div id="casino-banner" class="carousel slide" data-ride="carousel">
 <!-- Indicators -->
-<!-- <ol class="carousel-indicators">
+<ol class="carousel-indicators hidden-lg">
   <li data-target="#casino-banner" data-slide-to="0" class="active"></li>
   <li data-target="#casino-banner" data-slide-to="1"></li>
   <li data-target="#casino-banner" data-slide-to="2"></li>
   <li data-target="#casino-banner" data-slide-to="3"></li>
   <li data-target="#casino-banner" data-slide-to="4"></li>
-</ol> -->
+</ol>
 <!-- Wrapper for slides -->
 <div class="carousel-inner" role="listbox">
   <div class="item active pirate-reg">
@@ -24,7 +24,7 @@
                     <span class="slide-bonus__second-line">без депозита</span>
                     <span class="slide-bonus__third-line">- за регистрацию -</span>
                     <a class="ds-link" data-toggle="modal" data-target="#modalRules">Подробнее</a>
-                    <button class="btn btn-danger btn-big btn-full-width btn-mobile-reg hidden-sm hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
+                    <button class="btn btn-danger btn-full-width btn-mobile-reg hidden-sm hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
                   </div>
                 </div>
 
@@ -71,7 +71,7 @@
     </div>
   </div>
 
-  <!-- <div class="item">
+  <div class="item">
     <img src="img/slider-images/slide-viking.png" alt="viking">
     <div class="">
 
@@ -101,7 +101,7 @@
     <div class="carousel-caption">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-xs-10 col-sm-7 col-md-6 registration-bonusWrap">
 
             <div class="registration-bonus">
               <div class="registration-bonus-content">
@@ -109,6 +109,7 @@
                 <h3 class="registration-bonus__underheader">Приветственный бонус</h3>
                 <span class="registration-bonus__count">1800$</span>
                 <a href="bonus.html" class="ds-link">Подробнее</a>
+                <button class="btn btn-secondary btn-secondary-full btn-full-width btn-mobile-reg hidden-sm hidden-md hidden-lg" type="button" data-toggle="modal" data-target="#modalReg">Регистрация</button>
               </div>
 
               <div class="registration-bonus-pers">
@@ -118,7 +119,7 @@
 
           </div>
 
-          <div class="col-md-4 col-md-offset-2">
+          <div class="col-sm-5 col-md-4 col-md-offset-2 hidden-xs">
             <div class="tiger-reg-form">
               <form action="#" class="registration-form-mini registration-form-mini--slide">
                 <div class="form-group">
@@ -168,7 +169,7 @@
         <a href="free-spins.html" class="btn btn-danger">Подробнее</a>
       </div>
     </div>
-  </div> -->
+  </div>
 </div>
 
 <!-- Controls -->
