some fixes to index

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
 		<div class="container">
 			<div class="row button-row">
-				<div class="col-md-6">
+				<div class="col-xs-6">
 					<h2 class="tab__header">Топ игры</h2>
 				</div>
-				<div class="col-md-6 text-right">
+				<div class="col-xs-6 text-right">
 					<button class="btn btn-secondary">Случайная игра</button>
 				</div>
 			</div>
@@ -219,10 +219,10 @@
 		<section class="popular-games">
 			<div class="container">
 				<div class="row header-row">
-					<div class="col-sm-6">
+					<div class="col-xs-6">
 						<h2 class="popular-games__header">Новые игры</h2>
 					</div>
-					<div class="col-sm-6 text-right">
+					<div class="col-xs-6 text-right">
 						<button class="btn btn-secondary">Случайная игра</button>
 					</div>
 				</div>
