--- a/free-spins.html
+++ b/free-spins.html
@@ -41,7 +41,7 @@
 							<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
 						</div>
 
-						<button class="btn btn-danger btn-wide" id="free-spins-button">Правила и условия</button>
+						<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalRules">Правила и условия</button>
 					</div>
 
 					<div class="col-sm-offset-1 col-sm-4">
@@ -82,7 +82,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="statistics__button-wrapper">
-							<button class="btn btn-danger btn-wide">Регистрация</button>
+							<button class="btn btn-danger btn-wide" data-toggle="modal" data-target="#modalReg">Регистрация</button>
 						</div>
 					</div>
 				</div>
