--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -42,49 +42,53 @@
 					</div>
 				</div>
 
-				<div class="row">
-					<div class="col-xs-12 col-sm-3">
-						<div class="level">
-							<div class="level__text-wrapper">
-								<span class="level__up-text">до</span>
-								<span class="level__money-amount">50$</span>
-								<span class="level__description">1 уровень</span>
+				<div class="rb-levels-info">
+
+					<div class="row">
+						<div class="col-xs-6 col-sm-3">
+							<div class="level">
+								<div class="level__text-wrapper">
+									<span class="level__up-text">до</span>
+									<span class="level__money-amount">50$</span>
+									<span class="level__description">1 уровень</span>
+								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="col-xs-12 col-sm-3">
-						<div class="level">
-							<div class="level__text-wrapper">
-								<span class="level__up-text">до</span>
-								<span class="level__money-amount">100$</span>
-								<span class="level__description">2 уровень</span>
+						<div class="col-xs-6 col-sm-3">
+							<div class="level">
+								<div class="level__text-wrapper">
+									<span class="level__up-text">до</span>
+									<span class="level__money-amount">100$</span>
+									<span class="level__description">2 уровень</span>
+								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="col-xs-12 col-sm-3">
-						<div class="level">
-							<div class="level__text-wrapper">
-								<span class="level__up-text">до</span>
-								<span class="level__money-amount">200$</span>
-								<span class="level__description">3 уровень</span>
+						<div class="col-xs-6 col-sm-3">
+							<div class="level">
+								<div class="level__text-wrapper">
+									<span class="level__up-text">до</span>
+									<span class="level__money-amount">200$</span>
+									<span class="level__description">3 уровень</span>
+								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="col-xs-12 col-sm-3">
-						<div class="level">
-							<div class="level__text-wrapper">
-								<span class="level__up-text">до</span>
-								<span class="level__money-amount">2000$</span>
-								<span class="level__description">Dark lord</span>
-								<div class="level__image-wrapper">
-									<img src="img/knight.png" alt="knight" condition="level__image">
+						<div class="col-xs-6 col-sm-3">
+							<div class="level">
+								<div class="level__text-wrapper">
+									<span class="level__up-text">до</span>
+									<span class="level__money-amount">2000$</span>
+									<span class="level__description">Dark lord</span>
+									<div class="level__image-wrapper">
+										<img src="img/knight.png" alt="knight" condition="level__image">
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+
 				</div>
 
 				<div class="row">
