--- a/tournament.html
+++ b/tournament.html
@@ -245,7 +245,7 @@
 												<col width="30%">
 											  <col width="30%">
 											</colgroup>
-											<tr class="places-table__row-header hidden-sm">
+											<tr class="places-table__row-header hidden-sm hidden-xs">
 												<td class="places-table__cell-header">Место</td>
 												<td class="places-table__cell-header">Приз</td>
 												<td class="places-table__cell-header">Счастливчик</td>
