--- a/_footer-wrapper.html
+++ b/_footer-wrapper.html
@@ -1,9 +1,9 @@
-<section class="games">
+<section class="games pre-footer">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-12 col-xs-12">
         <div class="row">
-          <div class="col-md-3 col-sm-4 col-xs-6">
+          <div class="col-md-3 col-sm-4 col-xs-4">
             <h2 class="games__header">Игры</h2>
             <ul class="games__list">
               <li class="games__item"><a href="#">NetEnt</a></li>
@@ -17,7 +17,7 @@
               <li class="games__item"><a href="#">Live диллер</a></li>
             </ul>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-6">
+          <div class="col-md-4 col-sm-4 col-xs-4">
             <h2 class="games__header">Акции</h2>
             <ul class="games__list">
               <li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
@@ -31,7 +31,7 @@
               <li class="games__item"><a href="levels.html">Уровни игроков</a></li>
             </ul>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-4 col-sm-4 col-xs-4">
             <h2 class="games__header">О нас</h2>
             <ul class="games__list">
               <li class="games__item games__item--policy">Политика конфиденциальности</li>
