--- a/bonus.html
+++ b/bonus.html
@@ -36,7 +36,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-6 col-lg-4">
+					<div class="col-sm-4 col-lg-4">
 						<div class="deposit deposit--first">
 							<span class="deposit__percents">100%</span>
 							<span class="deposit__number">Первый депозит</span>
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-6 col-lg-4">
+					<div class="col-sm-4 col-lg-4">
 						<div class="deposit deposit--second">
 							<span class="deposit__percents">50%</span>
 							<span class="deposit__number">Второй депозит</span>
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-offset-3 col-sm-6 col-lg-offset-0 col-lg-4">
+					<div class="col-sm-4 col-lg-4">
 						<div class="deposit deposit--third">
 							<span class="deposit__percents">200%</span>
 							<span class="deposit__number">Третий депозит</span>
@@ -112,18 +112,15 @@
 				</div>
 
 				<div class="row">
-					<div class="col-xs-6 col-sm-offset-1 col-sm-5 col-md-offset-1 col-md-2">
-						<span class="cashback__not-all">Это еще не все</span>
+					<div class="col-xs-5 text-center">
+						<span class="cashback__not-all hidden-xs">Это еще не все</span>
+						<button class="btn btn-danger btn-wide">Депозит сейчас</button>
 					</div>
 
-					<div class="col-xs-6 col-sm-6">
+					<div class="col-xs-6">
 						<p class="cashback__advantages">А так же вы получите <span class="cashback__red">3й уровень,</span> который даст вам массу <span class="cashback__dashed">преимуществ</span>
 							<a href="levels.html" class="cashback__question">?</a>
 						</p>
-					</div>
-
-					<div class="col-sm-12 col-md-4">
-						<button class="btn btn-danger btn-wide">Депозит сейчас</button>
 					</div>
 				</div>
 			</div>
