updated tabs (norm or not?), buttons

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
 						<ul class="nav navbar-nav navbar-games">
-							<li class="active navbar-games-item"><a href="#">Лобби<span class="sr-only">(current)</span></a></li>
-							<li class="navbar-games-item"><a href="#">Слоты</a></li>
-							<li class="navbar-games-item"><a href="#">Джекпоты</a></li>
-							<li class="navbar-games-item"><a href="#">Настольные</a></li>
-							<li class="navbar-games-item"><a href="#">Live диллер</a></li>
+							<li class="active navbar-games-item"><a href="#" class="navbar-games-link">Лобби<span class="sr-only">(current)</span></a></li>
+							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Слоты</a></li>
+							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Джекпоты</a></li>
+							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Настольные</a></li>
+							<li class="navbar-games-item"><a href="#" class="navbar-games-link">Live диллер</a></li>
 						</ul>
 
 						<ul class="nav navbar-nav navbar-right navbar-provider">
