--- a/_footer-wrapper.html
+++ b/_footer-wrapper.html
@@ -21,7 +21,7 @@
             <h2 class="games__header">Акции</h2>
             <ul class="games__list">
               <li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
-              <li class="games__item"><a href="bonus.html">VIP Bonus</a></li>
+              <li class="games__item"><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
               <li class="games__item"><a href="reload-bonus.html">Reload бонус</a></li>
               <li class="games__item"><a href="everyweek-cashback.html">Кэшбек</a></li>
               <li class="games__item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
