--- a/_header.html
+++ b/_header.html
@@ -10,6 +10,10 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
+						<button type="button" class="navbar-toggle collapsed navbar-toggle-collapsed-search" data-toggle="collapse" data-target="#header-search-collapse" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<img src="img/magnifier-big.png" alt="magnifier" class="header-search-button">
+						</button>
 						<a class="navbar-brand ds-logo-wrap" href="index.html">
 							<img src="img/logo.png" alt="darkslot-logo" class="ds-logo">
 						</a>
@@ -91,7 +95,15 @@
 							<li class="header__deposit-btn hidden"><button type="button" class="btn btn-secondary">Депозит</button></li>
 
 						</ul>
-					</div><!-- /.navbar-collapse -->
+					</div> <!-- /.navbar-collapse -->
+
+					<div class="collapse navbar-collapse" id="header-search-collapse">
+						<ul class="nav navbar-nav">
+							<form class="navbar-search pull-left">
+								<input type="text" class="search-query" placeholder="Search">
+							</form>
+						</ul>
+					</div>
 
 				</div>
 			</div>
